--- a/notebooks/tf_serving_test_client.ipynb
+++ b/notebooks/tf_serving_test_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,16 @@
    ],
    "source": [
     "!ls /tf_servingd/tf_servingd.sock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "channel = grpc.insecure_channel('unix:///tf_servingd/tf_servingd.sock')\n",
+    "stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)"
    ]
   },
   {
@@ -45,9 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel = grpc.insecure_channel('unix:///tf_servingd/tf_servingd.sock')\n",
-    "stub = prediction_service_pb2_grpc.PredictionServiceStub(channel)\n",
-    "\n",
     "request = predict_pb2.PredictRequest()\n",
     "request.model_spec.name = 'mobilenetv2_test1'\n",
     "request.model_spec.signature_name = 'serving_default'\n",
@@ -109,6 +116,52 @@
     "response = stub.Predict(request, 100)\n",
     "\n",
     "pred = tf.make_ndarray(response.outputs['output_0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = tf.image.decode_image(tf.io.read_file('sf.jpg'), 3)\n",
+    "img_letter_box = tf.image.resize_with_pad(img, 608, 608)\n",
+    "img_normalized = img_letter_box / 255.0\n",
+    "imgs = img_normalized[tf.newaxis, ...]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "_InactiveRpcError",
+     "evalue": "<_InactiveRpcError of RPC that terminated with:\n\tstatus = StatusCode.UNKNOWN\n\tdetails = \"2 root error(s) found.\n  (0) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\n\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\n\t [[PartitionedCall/_761]]\n  (1) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\n\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\n\t [[PartitionedCall/PartitionedCall/TRTEngineOp_1_1]]\n0 successful operations.\n0 derived errors ignored.\"\n\tdebug_error_string = \"{\"created\":\"@1609344904.950617009\",\"description\":\"Error received from peer unix:/tf_servingd/tf_servingd.sock\",\"file\":\"src/core/lib/surface/call.cc\",\"file_line\":1061,\"grpc_message\":\"2 root error(s) found.\\n  (0) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\\n\\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\\n\\t [[PartitionedCall/_761]]\\n  (1) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\\n\\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\\n\\t [[PartitionedCall/PartitionedCall/TRTEngineOp_1_1]]\\n0 successful operations.\\n0 derived errors ignored.\",\"grpc_status\":2}\"\n>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31m_InactiveRpcError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-06257eb545cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_spec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msignature_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'serving_default'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"imgs\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCopyFrom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake_tensor_proto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimgs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstub\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/grpc/_channel.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, request, timeout, metadata, credentials, wait_for_ready, compression)\u001b[0m\n\u001b[1;32m    824\u001b[0m         state, call, = self._blocking(request, timeout, metadata, credentials,\n\u001b[1;32m    825\u001b[0m                                       wait_for_ready, compression)\n\u001b[0;32m--> 826\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_end_unary_response_blocking\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    827\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    828\u001b[0m     def with_call(self,\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/grpc/_channel.py\u001b[0m in \u001b[0;36m_end_unary_response_blocking\u001b[0;34m(state, call, with_call, deadline)\u001b[0m\n\u001b[1;32m    727\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    728\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0m_InactiveRpcError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    731\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31m_InactiveRpcError\u001b[0m: <_InactiveRpcError of RPC that terminated with:\n\tstatus = StatusCode.UNKNOWN\n\tdetails = \"2 root error(s) found.\n  (0) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\n\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\n\t [[PartitionedCall/_761]]\n  (1) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\n\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\n\t [[PartitionedCall/PartitionedCall/TRTEngineOp_1_1]]\n0 successful operations.\n0 derived errors ignored.\"\n\tdebug_error_string = \"{\"created\":\"@1609344904.950617009\",\"description\":\"Error received from peer unix:/tf_servingd/tf_servingd.sock\",\"file\":\"src/core/lib/surface/call.cc\",\"file_line\":1061,\"grpc_message\":\"2 root error(s) found.\\n  (0) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\\n\\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\\n\\t [[PartitionedCall/_761]]\\n  (1) Unknown: Failed to get convolution algorithm. This is probably because cuDNN failed to initialize, so try looking to see if a warning log message was printed above.\\n\\t [[{{node StatefulPartitionedCall/yolov3/functional_1/conv2d_68/Conv2D}}]]\\n\\t [[PartitionedCall/PartitionedCall/TRTEngineOp_1_1]]\\n0 successful operations.\\n0 derived errors ignored.\",\"grpc_status\":2}\"\n>"
+     ]
+    }
+   ],
+   "source": [
+    "request = predict_pb2.PredictRequest()\n",
+    "request.model_spec.name = 'yolov3'\n",
+    "request.model_spec.signature_name = 'serving_default'\n",
+    "request.inputs[\"imgs\"].CopyFrom(tf.make_tensor_proto(imgs))\n",
+    "response = stub.Predict(request, 1000)"
    ]
   },
   {
